--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,24 +20,22 @@
     "axios": "^1.3.4",
     "country-state-city": "^3.1.2",
     "js-cookie": "^3.0.1",
+    "lottie-react": "^2.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
-    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "redux-toolkit": "^1.1.2",
     "socket.io-client": "^4.6.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "install:legacy": "npm install --legacy-peer-deps",
-    "start": "npm run install:legacy && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
